--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -444,8 +444,9 @@ blockquote span{
 	/*text-align: left;*/
 	text-align: center;
 	line-height: 18px;
-	*text-align:left;
-	position: relative;/* for .jq_points_container */
+
+	position: absolute;
+	width: 100%;
 }
 .jq_question_name-wr,
 .jq_points_container,
@@ -454,6 +455,9 @@ blockquote span{
 }
 	
 /*------------- progressbar ----------------*/
+.progress {
+	position: relative;
+}
 .progress-striped .bar {
 	background-color: #6d9f2c !important;
 }
