--- a/com_joomlaquiz_expert/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz_expert/admin/models/forms/quiz.xml
@@ -106,8 +106,17 @@
 				<option value="1">COM_JOOMLAQUIZ_YES</option>
 		</field>
 		<field name="c_passing_score" type="text" default="" size="30"
-				label="COM_JOOMLAQUIZ_PASSING_SCORE2" 
-                 labelclass="control-label">
+			   label="COM_JOOMLAQUIZ_PASSING_SCORE2"
+			   labelclass="control-label">
+		</field>
+		<field name="one_time"
+			   type="radio"
+			   class="btn-group"
+			   label="COM_JOOMLAQUIZ_ONE_TIME"
+			   labelclass="control-label"
+			   default="0">
+			<option value="0">COM_JOOMLAQUIZ_NO</option>
+			<option value="1">COM_JOOMLAQUIZ_YES</option>
 		</field>
 	</fieldset>
 	
