--- a/com_joomlaquiz_expert/site/assets/css/joomlaquiz.css
+++ b/com_joomlaquiz_expert/site/assets/css/joomlaquiz.css
@@ -52,24 +52,28 @@ object{
 	margin-bottom:15px;
 }
 /* progressbar */
+@-webkit-keyframes progress-bar-stripes {
+	from  { background-position: 40px 0; }
+	to    { background-position: 0 0; }
+}
+
+@keyframes progress-bar-stripes {
+	from  { background-position: 40px 0; }
+	to    { background-position: 0 0; }
+}
+
 #jq_quiz_container .progress {
 	overflow: hidden;
 	height: 18px;
 	margin-bottom: 18px;
-	background-color: #f7f7f7;
-	background-image: -moz-linear-gradient(top,#f5f5f5,#f9f9f9);
-	background-image: -webkit-gradient(linear,0 0,0 100%,from(#f5f5f5),to(#f9f9f9));
-	background-image: -webkit-linear-gradient(top,#f5f5f5,#f9f9f9);
-	background-image: -o-linear-gradient(top,#f5f5f5,#f9f9f9);
-	background-image: linear-gradient(to bottom,#f5f5f5,#f9f9f9);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff9f9f9', GradientType=0);
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
+}
+
+#jq_quiz_container .progress .bar {
+	width: 0%;
+	height: 100%;
 }
 
 #jq_quiz_container .progress.active .bar {
@@ -90,33 +94,6 @@ object{
 	-moz-background-size: 40px 40px;
 	-o-background-size: 40px 40px;
 	background-size: 40px 40px;
-}
-#jq_quiz_container .progress .bar {
-	width: 0%;
-	height: 100%;
-	color: #fff;
-	float: left;
-	font-size: 12px;
-	text-align: center;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
-	background-color: #0e90d2;
-	background-image: -moz-linear-gradient(top,#149bdf,#0480be);
-	background-image: -webkit-gradient(linear,0 0,0 100%,from(#149bdf),to(#0480be));
-	background-image: -webkit-linear-gradient(top,#149bdf,#0480be);
-	background-image: -o-linear-gradient(top,#149bdf,#0480be);
-	background-image: linear-gradient(to bottom,#149bdf,#0480be);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff149bdf', endColorstr='#ff0480be', GradientType=0);
-	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
-	-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
-	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	-webkit-transition: width .6s ease;
-	-moz-transition: width .6s ease;
-	-o-transition: width .6s ease;
-	transition: width .6s ease;
 }
 
 .jq_progressbar_culculus{
