--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -35,7 +35,6 @@ div.correct_answer
 #quest_table
 {
 	border:none !important;
-	width: 100%;
 }
 
 #quest_table tr,td
@@ -50,8 +49,7 @@ div.correct_answer
 
 div.jq_draggable_div {
     position:relative;
-    /*width:250px;*/
-	width: 95%;
+    width:250px;
     height:30px;/* !important always == 30px ! */
     margin:10px;
 	background: #bcdb95 !important; /* Old browsers */
@@ -72,8 +70,7 @@ div.jq_draggable_div {
 }
 div.jq_draggable_stop_div {
     position:relative;
-    /*width:250px;*/
-	width: 95%;
+    width:250px;
     height:30px;/* !important always == 30px ! */
     margin:10px;
     background: #bcdb95 !important; /* Old browsers */
@@ -94,8 +91,7 @@ div.jq_draggable_stop_div {
 }
 div.jq_cont_drag_div {
     position:relative;
-    /*width:250px;*/
-	width: 95%;
+    width:250px;
     height:30px;/* !important always == 30px ! */
     margin:10px;
     background: #9edb64 !important; /* Old browsers */
@@ -116,8 +112,7 @@ div.jq_cont_drag_div {
 }
 div.jq_highlight_drag_div {
     position:relative;
-    /*width:250px;*/
-	width: 95%;
+    width:250px;
     height:30px;/* !important always == 30px ! */
     margin:10px;
     background: #bcdb95 !important; /* Old browsers */
