--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -574,7 +574,7 @@ div.jq_highlight_drag_div {
     background-repeat:no-repeat;
 }
 #jq_back_link_container {
-    float:right;
+    float:left;
     margin-right:10px;
     background:url(../images/back.png);
     cursor:pointer;
