--- a/com_joomlaquiz_expert/admin/models/forms/lpath.xml
+++ b/com_joomlaquiz_expert/admin/models/forms/lpath.xml
@@ -17,6 +17,13 @@
 			<option value="0">COM_JOOMLAQUIZ_FREE</option>
 			<option value="1">COM_JOOMLAQUIZ_PAID</option>
 		</field>
+		<field name="category"
+			   type="category"
+			   extension="com_joomlaquiz.lpath"
+			   label="COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY"
+			   labelclass="control-label"
+			   description="COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY" >
+		</field>
 		<field
 				name="published"
 				type="radio"
