--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -1,4 +1,5 @@
 /*- Blank Drag-Drop ---------------------------------------------------*/
+
 .blank_correct{
     background-color: #bbFFbb;
 }
@@ -294,7 +295,7 @@ textarea.jq_survey {
 
 .jq_quiz_container_tbl #jq_quiz_container1 {
     width:100%;
-    min-height:250px;
+    min-height:200px;
     height:auto;
     padding-top: 10px;
     clear: both;
@@ -404,9 +405,9 @@ div.incorrect_answer {
     background-position: left middle;
     background-color: #FFCCCC;
     border: 1px solid #666666;
-    font-weight: bold;
+    font-weight: normal;
     min-width: 200px;
-    font-size: 18px;
+    font-size: 15px;
     vertical-align:middle;
     min-height: 40px;
     padding: 10px 5px 0 50px;
@@ -423,7 +424,7 @@ div.correct_answer {
     min-width: 200px;
     font-size: 18px;
     vertical-align:middle;
-    min-height: 40px;
+    min-height: 50px;
     padding: 10px 5px 0 50px;
     /*	opacity: 0.75;	*/
     z-index: 1000;
@@ -574,7 +575,7 @@ div.jq_highlight_drag_div {
     background-repeat:no-repeat;
 }
 #jq_back_link_container {
-    float:right;
+    float:left;
     margin-right:10px;
     background:url(../images/back.png);
     cursor:pointer;
