--- a/com_joomlaquiz/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz/admin/models/forms/quiz.xml
@@ -2,6 +2,7 @@
 <form>
 	<fieldset name="quiz_details"
 		label="COM_JOOMLAQUIZ_SETTINGS_GLOBAL"
+		addfieldpath="/administrator/components/com_categories/models/fields"
 		>
 		
 		<field name="asset_id" type="hidden" filter="unset" />
@@ -20,9 +21,9 @@
 		</field>
 		<field 
 			name="c_category_id" 
-			type="category" 
+			type="categoryedit"
 			extension="com_joomlaquiz" 
-			label="COM_JOOMLAQUIZ_CATEGORY2"
+			label="COM_JOOMLAQUIZ_CATEGORY" 
 			description="COM_JOOMLAQUIZ_CHOOSE_THE_QUIZCAT" 
 		/>
 		<field name="c_author" type="text" default="" size="30"
@@ -106,7 +107,7 @@
 				<option value="1">COM_JOOMLAQUIZ_YES</option>
 		</field>
 		<field name="c_passing_score" type="text" default="" size="30"
-				label="COM_JOOMLAQUIZ_PASSING_SCORE2"
+			   label="COM_JOOMLAQUIZ_PASSING_SCORE2"
 			   labelclass="control-label">
 		</field>
 		<field name="one_time"
