fix issues with template => JQD-1362

--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -445,7 +445,7 @@ blockquote span{
 	text-align: center;
 	line-height: 18px;
 
-	position: absolute;
+	/*position: absolute;*/
 	width: 100%;
 }
 .jq_question_name-wr,
