--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -448,7 +448,7 @@ blockquote span{
 
 .jq_question_info_container{
 	text-align: center;
-	position: absolute;
+	/*position: absolute;*/
 	width: 100%;
 }
 	
