Added styles for simple and t3_bs3

--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_simple/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_simple/css/jq_template.css
@@ -596,3 +596,6 @@ html>/**/body .square {border-style:dotted;} /*all normal browsers*/
 	font-weight:bold;
 	color:#333;
 }
+.btn:hover, .btn:focus{
+	background-position: 0 -26px !important;
+}
