change css in jq_template.css according to https://issues.belitsoft.com/browse/JCUSTOMDEV-580?focusedCommentId=124265&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-124265

--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -441,12 +441,12 @@ div.correct_answer {
 .choice_static
 {
     display: none;
-    text-align: left;
+    /*text-align: left;
     padding-left:40px;
-    color:#666666;
+    color:#666666;*/
 }
 
-td.sectiontableheader:nth-last-child(1) {
+.jq_feedback_question td.sectiontableheader:nth-last-child(1) {
     display: none;
 }
 
